more spacing fixes

--- a/src/components/mentions_line/mentions_line.scss
+++ b/src/components/mentions_line/mentions_line.scss
@@ -1,6 +1,10 @@
 .MentionsLine {
   word-break: break-all;
 
+  .mention-link:not(:first-child)::before {
+    content: ' ';
+  }
+
   .showMoreLess {
     margin-left: 0.5em;
     white-space: normal;
